<resources>
    <string name="app_name">7habit</string>
    <string name="hint_dialog_goalName">هدف خود را بنویسید</string>
    <string name="dialog_title">مشخصات هدف خود را بنویسید</string>
    <string name="dialog_save_btn">ذخیره</string>
    <string name="habit_main">عادات بد</string>
    <string name="edit_dream">رویا خود را ویرایش کنید</string>
    <string name="goal">هدف</string>
    <string name="help_point">با کلیک بروی این علامت در صفحه تمرین ها وارد مرحله ای که در آن هستید می شوید</string>
    <string name="help_prize">این علامت به این معنی است که شما آن مرحله را با موفقیت به پایان رسانیده اید</string>
    <string name="help_emp">این علامت به این معنی است که این مراحل هنوز باقی مانده است</string>
    <string name="start_tr">شروع تمرین 21 روز</string>
    <string name="days18">مرحله (روز) هجدهم</string>
    <string name="days19">مرحله (روز) نوزدهم</string>
    <string name="days21">مرحله (روز) بیست و یکم</string>
    <string name="days20">مرحله (روز) بیستم</string>
    <string name="page99_1">عادت هفتم</string>
    <string name="page99_2">اره را تیز کنید</string>
    <string name="one_part">بعد اول: فیزیکی
    شامل ورزش ،تغذیه،مدیریت استرس</string>
    <string name="two_part">بعد دوم: اجتماعی/عاطفی
    شامل خدمات،همدلی،هم کوشی</string>
    <string name="three_part">بعد سوم: ذهنی
    شامل مطالعه،تصویر سازی،برنامه ریزی،نوشتن</string>
    <string name="four_part">بعد چهارم:روحی
    شامل مطالعه،تعهد،شفاف سازی،ارزشها</string>
    <string name="finish">پایان این مرحله</string>
    <string name="about_me">من ....</string>
    <string name="days18_tr3">در صورتی که یک روز کامل را در مربع اول صرف نکنید،کدام مربع را در اولویت دوم قرار می دهید؟چرا؟</string>
    <string name="days18_tr1">تک تک کار هایی که هفته گذشته کرده اید را بر اساس فوریت دسته بندی کنید.چه میزان زمان برای هر مربع صرف کرده اید؟</string>
    <string name="days18_tr2">بیشترین وقت و تلاش خود را به کدام ربع اختصاص داده اید؟</string>
    <string name="days20_tr">متعهد شوید که هر هفته تمرین تیز کردن اره در هر چهار بعد را انجام دهید.عملکرد خود را هر هفته ارزیابی کنید</string>
    <string name="go_tr">رفتن به تمرین های این روز</string>
    <string name="days17_tr">لیستی از تفویض اختیار ناظراند خود در تمامی نقش هایتان فراهم کنید و نحوه تفویض اختیار را مشخص کنید</string>
    <string name="ekhtiyar">من تفویض اختیار می کنم....</string>
    <string name="slide67">تفویض اختیار نظارت کننده</string>
    <string name="slide66_1">از سوی دیگر مدیر می تواند با صرف همین مدت و با تفویض اختیار مؤثر تولید خود را ده، پنجاه و یا صد برابر کند
</string>
    <string name="slide66_2">مدیریت اساساً به مفهوم پیش بردن نقطۀ اتکا به سوی تولید بیشتر است و تفویض اختیار در این راستا کلید مدیریت مؤثر محسوب می شود.
</string>
    <string name="slide65">تفویض اختیار:افزایش تولید و قابلیت تولید</string>
    <string name="slide64">مدیریت نفس</string>
    <string name="days16_tr">جدو زمان بندی هفتگی خود را پر کنید</string>
    <string name="goCal">رفتن به برنامه ریزی هفتگی</string>
    <string name="slide53">سازماندهی مربع 2 مستلزم رعایت شش معیار زیر است:</string>
    <string name="slide54">1.ارتباط:</string>
    <string name="slide55">2.توازن:</string>
    <string name="slide56">3.کانون مربع 2:</string>
    <string name="slide57">4.بٌعد مردم:</string>
    <string name="slide58">5.انعطاف پذیری:</string>
    <string name="slide59">6.قابلیت حمل:</string>
    <string name="slide60">شناسایی نقشها</string>
    <string name="slide61">انتخاب اهداف</string>
    <string name="slide62">برنامه زمانبندی</string>
    <string name="days15_tr">مربع شماره یک و دو خو را الویت بندی کنید  بر اساس مسیر رسیدن به رویای خود و کانون اصولتان</string>
    <string name="slide51">برای گفتن (( آری )) به اولویتهای ضروری مربع 2 ناگزیرید که به فعالیتهای دیگری که گاه ضروری می نماید، (( نه )) بگویید.
</string>
    <string name="goToSquare">رفتن به صفحه مربع ها</string>
    <string name="days14_tr">چهار مربع خود را پر کنید</string>
    <string name="one_square">مربع 1: فعالیت  های مربوط به بحرانها و مسائل مشکلات حاد طرح های مهلت دار
</string>
    <string name="two_square">مربع 2: فعالیتهای مربوط به پیشگیری مربوط به قابلیت تولید ایجاد روابط شناخت فرصتهای تازه برنامه ریزی و تفریح سازنده
</string>
    <string name="three_square">مربع 3: فعالیت های مربوط به گسیختگی ها، مانند بعضی از تلفنها،  نامه ها و گزارش ها بعضی از جلسات امور فشار اور و فوری رعایت کارهای همه پسند.
</string>
    <string name="four_square">مربع 4: فعالیت های مربوط به کارهای پیش پا افتاده بعضی از نامه ها بعضی از مکالمات تلفنی اتلاف وقت سرگرمیها
</string>
    <string name="slide47_1">صفت مشترک موفقیت:
</string>
    <string name="slide47_2">نخست، امور نخست را قرار دهید.
</string>
    <string name="days13_1_tr">مواردی که مرتبط با رهبری شخصی شماست و در دایره نفوذتان هست بنویسید</string>
    <string name="days13_2_tr">مواردی که مربوط به مدیریت شخصی شماست بنویسید</string>
    <string name="slide46">مدیریت مؤثر یعنی نخست، امور نخست را قرار دهید. در حقیقت رهبری، اولویت کارها را به گونه ای کلان مرکز توجه قرار می دهد. در صورتی که مدیریت برای جزء جزء آن اولویت قائل است.
</string>
    <string name="slide45">نیروی اراده آزاد</string>
    <string name="slide44">با مغز چپ مدیریت کنید با مغز راست رهبری</string>
    <string name="nokhost_1">در حال حاضر</string>
    <string name="nokhost_2">با انجام این کار....</string>
    <string name="days12_1_tr">پرسش1؛ به کاری اشاره کنید ( در حال حاضر آن را انجام نمی دهید) که با انجام مداوم و منظم آن بتوانید تغییر  مثبت و قابل توجهی در زندگیتان پدید آورید؟
</string>
    <string name="days12_2_tr">پرسش2؛ با انجام چه کاری در کسب کارتان  به نتایج مشابهی دست می یابید؟
</string>
    <string name="slide40_1">عادت 3:</string>
    <string name="slide40_2">         نخست، امور نخست را قرار دهید</string>
    <string name="slide40_3">پر اهمیت ترین کارها هرگز نباید قربانی کم اهمیت ترین کارها بشوند.
                                                        ((گوته))
</string>
    <string name="osol">اصول من......</string>
    <string name="day11_tr_help">راهنمایی: اصول،قوانینی هستند که مداوم آنها را باید رعایت کنید</string>
    <string name="days11_tr">اصول خود را مبتنی بر کانون خود(که همان رویای شماست) و مسیر رسیدن به آن بنویسید:</string>
    <string name="slide39">فرانکل می گوید رسالتی را که در زندگی داریم کشف می کنیم، نه ایجاد. انتخاب این کلمات را دوست دارم. معتقدم همه ما راهنمایی درونی یا حسی-شعوری- داریم که ما را از یکتایی و خدمات منحصر به فردمان آگاه می سازد. به گفته فرانکل: ((هرکس در زندگیش حرفه یا رسالتی ویژه دارد... از این رو، نه کسی می تواند جانشین او شود نه زندگیش تکرار گردد. بنابراین، وظیفه هر انسانی همان قدر یکتاست که مجال ویژه به انجام رساندن آن.))
</string>
    <string name="slide37">کانونی مبتنی بر اصول
</string>
    <string name="canon">کانون من.....</string>
    <string name="days10_tr">کانوم شما چیست؟آن را بنویسید و مشخص کنید چطور بر امنیت،هدایت و حکمت و قدرت شما تاثیرگذار است</string>
    <string name="slide31">هر آنچه در کانون زندگیمان است منشأ امنیت و هدایت و حکمت و قدرت ما خواهد بود.
</string>
    <string name="slide32">امنیت نمایانگر احساس ارزشمندی و هویت و لنگرگاه عاطفی و احترام به خود و قدرت اساسی یا عدم آن در وجودتان است.
</string>
    <string name="slide33">هدایت یعنی منشأ تعیین مسیرتان در زندگی. یعنی چهارچوب درونی تان که- محاط در نقشه تان- رویدادهای بیرونی را- به صورت معیارها یا اصول یا ضوابطی ضمنی که بر تصمیم گیری و کنش لحظه به لحظه حاکمند- برایتان تعبیر و تفسیر می کند.
</string>
    <string name="slide34">حکمت (نوع نگاه به زندگی خود(چشم انداز زندگی)) عبارت است از دیدگاهتان نسبت به زندگی و حس تعادل و ادراکتان از این که چگونه بخشها و اصول گوناگون به کار می روند و ارتباط آنها با یکدیگر. داوری و حس تشخیص و ادراک را نیز در برمی گیرد. گشتالت یا وحدت یا جامعیتی تکمیل  یافته است.
</string>
    <string name="slide35">قدرت عبارت است از توانایی یا ظرفیت دست به عمل زدن، نیرو و قوه  به انجام رساندن چیزی؛ نیروی حیاتی انتخاب کردن و تصمیم گیریها. همچنین توانایی غلبه بر عادتها عمیقاً خو گرفته و پرورش عادتهای والاتر و مؤثرتر را بر می گیرد.
</string>
    <string name="indivisual">رسالت شخصی.....</string>
    <string name="slide28">شعار رسالت شخصی</string>
    <string name="slide29">در کانون</string>
    <string name="day9_tr">شعاررسالت شخصی خود را بر اساس رویایتان بنویسید.
    این شعار باید به نحوی نوشته شود که هر بار آن را تکرار می کنید وجودتان سرشار از انرژی مثبت شود و شما قدرت حرکت به سمت رویایتان را پیدا کنید.</string>
    <string name="way_to_dream">مسیر رسیدن به موفقیت.....</string>
    <string name="day8_tr">سعی کن با تخیل خود مسیر رسیدن به رویایی که روز قبل نوشتی مشخص کنید مانند یک نقشه راه،مانند اینکه از شهری به شهر دیگر می خواهید بروید</string>
    <string name="slide26_1">رهبری و مدیریت: دو آفرینش</string>
    <string name="slide26_2">حاصل نخستین آفرینش خودتان باشید</string>
    <string name="day7_tr">حال یک انتها لذت بخش،یک رویای سوزان را برای خودت انتخاب کن که به زندگی تو مفهوم بدهد</string>
    <string name="dream_sozan">رویا لذت بخش....</string>
    <string name="slide24">همه چیز دوباره آفریده می شود</string>
    <string name="slide24_1">((ذهناً از پایان آغاز کنید)) مبتنی بر این اصل است که همه چیز دوباره آفریده می شود.همه چیز دوباره آفرینشی ذهنی یا نخستین، و آفرینشی جسمانی یا دوم دارد.
</string>
    <string name="matn_khaksepari">متن سخرانی هنگام خاکسپاری.....</string>
    <string name="day6_tr">متن مراسم خاکسپاری خود در 120 سال آینده را بنویسید.در آن زمان مردم در مورد شما چه می گویند؟</string>
    <string name="slide22_1">عادت 2:  </string>
    <string name="slide22_2">ذهناً از پایان آغاز کنید</string>
    <string name="slide22_3">آنچه در پس و پیش روی ماست در قیاس با آنچه درون ماست ناچیز است.
                                                                    ((الیور وندل هولمز))
</string>
    <string name="list_halghe">لیست تعهدات ....</string>
    <string name="days5_tr">لیستی از تعهدات خود ایجاد کنید بر اساس حلقه نفوذ که می خواهید در سه ماه آینده بروی آنها تمرکز کنید</string>
    <string name="slide20">متعهد شدن و حفظ تعهد</string>
    <string name="in">داخل حلقه نفوذ</string>
    <string name="days5">مرحله (روز) پنجم</string>
    <string name="days6">مرحله (روز) ششم</string>
    <string name="days7">مرحله (روز) هفتم</string>
    <string name="out">خارج حلقه نفوذ</string>
    <string name="negrani_dl"> نگرانی خود را بنویسید</string>
    <string name="slide5">نگرش هفت گانه</string>
    <string name="slide4">توصیف((عادتها))</string>
    <string name="slide3">مشکل، نگرشی است که نسبت به مشکل داریم</string>
    <string name="slide2_2">منش ما اساساً متشکل از عادتهای ماست. ضرب المثلی می گوید: ((اندیشه یی بکار تا عملی دروکنی. عملی بکار تا عادتی دروکنی.عادتی بکار تا منشی دروکنی. منشی بکار تا تقدیری درو کنی
</string>
    <string name="slide2_1">همانیم که مدام به آن می پردازیم.پس تعالی، نه عمل، که عادت است.ارسطو</string>
    <string name="slide1">آلبرت انیشتین گفته است: ((به هنگام رویارویی با مشکلات اساسی نمی توانیم از همان سطح تفکری که آن مشکلات را به وجود آوردیم، آنها را برطرف کنیم.))
</string>
    <string name="days1">مرحله (روز) اول</string>
    <string name="one">یکبار</string>
    <string name="dialy">روزانه</string>
    <string name="weekly">هفته ای </string>
    <string name="monthly">ماهانه</string>
    <string name="vista_spiner">نقش مربوط به هدف را از زیر انتخاب کنید</string>
    <string name="dream">رویا</string>
    <string name="role">نقش</string>
    <string name="edit_eeuu">موضوع کار خود را وارد کنید</string>
    <string name="edit_eeuu_detial">توضیحات کار خود را وارد کنید</string>
    <string name="add_vista">موضوع خود  را وارد کنید</string>
    <string name="add_detial_vista">توضیحات خود را وارد کنید</string>
    <string name="add_grd">مشخصات رویا و نقش و با هدف خود را وارد کنید</string>
    <string name="add_NENEtask">مشخصات کار غیر ضروری/غیر اضطراری خود را وارد کنید</string>
    <string name="dialog_cancel_btn">لغو</string>
    <string name="upgrade_dialog_bad_habit_hint">راه اصلاح عادت بد خود را بنویسید</string>
    <string name="detail_dialog_bad_habit_hint">توضیح عادت بد خود را بنویسید</string>
    <string name="title_dialog_bad_habit_hint">موضوع عادت بد خود را بنویسید</string>
    <string name="bad_habit_dialog_title">مشخصات عادات بد خود را بنویسید</string>
</resources>