<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    tools:context="ir.mehrdadseyfi.a7habit.DialogBadHabitAddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bad_habit_dialog_title"/>
    <EditText
        android:id="@+id/tilteHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/title_dialog_bad_habit_hint"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:lines="3"
        android:maxLines="10"
        android:minLines="1"
        android:scrollbars="vertical"
        android:hint="@string/detail_dialog_bad_habit_hint"
        android:id="@+id/detialHabit"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:lines="3"
        android:maxLines="10"
        android:minLines="1"
        android:scrollbars="vertical"
        android:id="@+id/upgradeHabit"
        android:hint="@string/upgrade_dialog_bad_habit_hint"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_alignParentBottom="true">
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dialog_save_btn"
          android:id="@+id/saveHabit"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dialog_cancel_btn"/>
  </LinearLayout>


</LinearLayout>
