<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.mehrdadseyfi.a7habit.TwentyOneDays.PracticeTheDays.DialogDays3Add">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:id="@+id/negrani_tl"
    android:hint="@string/negrani_dl"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in"
            android:text="@string/in"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/out"
            android:text="@string/out"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/save"
            android:text="@string/dialog_save_btn"
            android:layout_width="80dp"
            android:background="@drawable/d3_ee"
            android:layout_marginRight="20dp"
            android:layout_height="60dp" />


        <Button
            android:id="@+id/cancel"
            android:text="@string/dialog_cancel_btn"
            android:layout_width="80dp"
            android:background="@drawable/d3_ee"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>
</LinearLayout>
