<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog"
    tools:context="ir.mehrdadseyfi.a7habit.Dialog">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:text="@string/dialog_title"/>

    <EditText
        android:id="@+id/dialog_goalName"
        android:layout_width="wrap_content"
        android:hint="@string/hint_dialog_goalName"
        android:layout_height="wrap_content"
        android:layout_gravity="end"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:id="@+id/spinGoal"
        android:entries="@array/spinnerItems"></Spinner>

<ir.mirrajabi.persiancalendar.PersianCalendarView
    android:layout_width="wrap_content"
    android:layout_height="290dp"></ir.mirrajabi.persiancalendar.PersianCalendarView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >
    <Button
        android:id="@+id/save"
        android:text="@string/dialog_save_btn"
        android:layout_width="60dp"
    android:layout_marginRight="20dp"
        android:layout_height="40dp" />


    <Button
        android:id="@+id/cancel"
        android:text="@string/dialog_cancel_btn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"/>

</LinearLayout>


</LinearLayout>
